--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ table{
     height: 100%;
     width: inherit;
 }
+label{
+    background-color: whitesmoke;
+    font: bolder 25px black;
+}
 #noteAreaBox{
     overflow: auto;
     width: 100%;
