--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ form{
     background-image: url(assets/images/formbg.jpg);
     min-width: 285px;
 }
+/*to organize the elements inside form*/
 table{
     height: 100%;
 }
@@ -25,16 +26,19 @@ label{
     background-color: whitesmoke;
     font: bolder 25px black;
 }
+/*Task area box in form element*/
 #noteAreaBox{
     overflow: auto;
     width: inherit;
     background-color: inherit;
     font: bolder large black;
 }
+/*Task area box that the user saved*/
 #container{
     margin: 10px;
     display: inline-block;
 }
+/*new task container*/
 .containerTask {
     display: inline-block;
     padding: 25px;
@@ -42,12 +46,14 @@ label{
     height: 200px;
     background-image: url(assets/images/notebg.png); 
 }
+/*the input the user entered in new task container*/
 .mainTask{
     width: 100%;
     height: 80%;
     margin-top: 10px;
     overflow: auto;
 }
+/*Date and Time container*/
 .dateAndTime{
     height: 20%;
     width: 100%;
@@ -60,13 +66,16 @@ label{
     top: -109%;
     left: 87%;
 }
+/*making the glyph icon round corners */
 svg{
     border-radius: 6px;
 }
+/*new fon family downloaded from google fonts*/
 @font-face {
     font-family: myFirstFont;
     src: url(assets/fonts/GloriaHallelujah-Regular.ttf);
 }
+/*Creating fadeIn animation on tasks*/
 .fade-in {
     animation: fadeIn ease 3s;
     -webkit-animation: fadeIn ease 3s;
@@ -93,10 +102,4 @@ svg{
 @-ms-keyframes fadeIn {
     0% {opacity:0;}
     100% {opacity:1;}
-}
-@media only screen and (max-width:768px){
-    [td*]{
-        width: 100%;
-        height: 100%;
-    }
 }
